# batalha-bk

./: .env-template  .gitignore  .pylintrc  Dockerfile  Justfile  README.md  docker-compose.yaml  justfile  pyproject.toml  setup.cfg
.github/workflows/: pylint.yml
alembic/: env.py
alembic/versions/: 064d04062820_create_players_table.py  b1abb72538c9_create_casual_table.py
migrations/: 001_create_players_table.sql
scripts/: setup.sh
src/: config.py  main.py
src/api/: websocket_handler.py
src/api/v1/: auth_router.py  http_routes.py  player_router.py
src/application/: ship.py
src/application/builders/: response.py
src/application/repositories/: game_repository.py  player_repository.py
src/application/services/: game.py  game_engine.py  game_old.py  notification_service.py  player.py  player_websocket.py
src/core/: config.py  security.py  secutiry.py
src/core/domain/: game.py  player.py  ship.py
src/core/interface/: connection_protocol.py  game_repository.py
src/core/manager/: connection_manager.py
src/core/player/: models.py  player_connection.py  repositories.py  schemas.py
src/core/schemas/: game_actions.py  place_ships.py  plalyer_schemas.py  player_info.py  start_game.py  validators.py
src/core/serializer/: ship.py
src/core/services/: game.py  player.py
src/domain/: game.py  game_validator.py  player.py  ship.py
src/game/: connection_manager.py  matchmaking.py  redis.py  router.py  utils.py
src/infra/: logger.py
src/infrastructure/: logger.py  security.py
src/player/: __init__.py  models.py  schemas.py
tests/: test_player_models.py
(+12 files in other folders)
