[project]
name = "batalha-naval"
version = "0.1.0"
description = ""
authors = [
    {name = "Humebrto",email = "you@example.com"},
    {name = "Henrique",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "batalha_naval", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
