[project]
name = "batalha-naval"
version = "0.1.0"
description = ""
authors = [
    {name = "Humebrto",email = "you@example.com"},
    {name = "Henrique",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.11,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "websockets (>=15.0.1,<16.0.0)",
    "redis (>=6.2.0,<7.0.0)",
    "pydantic (>=2.11.5,<3.0.0)",
    "coloredlogs (>=15.0.0,<16.0.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "bcrypt (==3.2.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "python-jose (>=3.5.0,<4.0.0)"
]

[tool.poetry]
packages = [{include = "src"}]

[tool.mypy]
files = ["src"]
exclude = [".venv"]
check_untyped_defs = true
disallow_untyped_defs = true

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.1.2"
mypy = "^1.15.0"
pylint = "^4.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
